Foodback model created. Controllers and static pages created, some layout added. Paper clip installed. Having trouble with Paperclip.

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,7 +1,9 @@
 ---
-rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-467067af7ade8f2e67a120f54f57f317.js
-application/index.js: application-467067af7ade8f2e67a120f54f57f317.js
-application.css: application-cbb2a1718b27a1adb4a02c41b8bf75af.css
-application/index.css: application-cbb2a1718b27a1adb4a02c41b8bf75af.css
+Thumbs.db: Thumbs-2809ec944faf465fa3476d3aacbccb5e.db
+Thumbs/index.db: Thumbs-2809ec944faf465fa3476d3aacbccb5e.db
+berries.jpg: berries-ce7097aba136984837bec0f1fbec7fa5.jpg
+berries/index.jpg: berries-ce7097aba136984837bec0f1fbec7fa5.jpg
+application.js: application-e722934555a9ea72ef251fd816da3060.js
+application/index.js: application-e722934555a9ea72ef251fd816da3060.js
+application.css: application-7091f2f5fa49bb0a494245e7f5dfa8bc.css
+application/index.css: application-7091f2f5fa49bb0a494245e7f5dfa8bc.css
